<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_data">Results</string>
    <string name="nav_device">Device</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="splash_name">Pseudonymous</string>
    <string name="nav_image_desc">User Image</string>
    <string name="menu_refresh">Refreshing…</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>All Reports</item>
        <item>Device Hub</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>


    <string name="action_snack_text">Speak now</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="app_name">Slumber</string>
    <string name="menu_setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_other_section">Other</string>
    <string name="about_main_text">Slumber was created by some highschool students who were working on a project. Then wanted it to come into fruition. So they set out into making this home automation system. Initially made for patients with sleep apnea then created to be a any use product</string>
    <string name="about_created_by">Created by Pseudonymous</string>
</resources>
