<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_action_chart"
            android:title="@string/nav_data" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_action_device"
            android:title="@string/nav_device" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_action_notifications"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_other_section">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>